Fix a few deprecation warnings when compiling with Java 11 (others remain that are harder to fix).
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1843330 13f79535-47bb-0310-9956-ffa450edef68